--- a/article/templates/detail_article.html
+++ b/article/templates/detail_article.html
@@ -48,10 +48,11 @@
     </div>
     <div class="content-wrap">
     <ul class="tags mt-10">
-    <li><a href="#">Food Habit</a></li>
+    <li><a href="#">{{ article.tags }}</a></li>
     </ul>
     <a href="#">
     <h3>{{ article.title }}</h3>
+    <br>
     </a>
     <ul class="meta pb-20">
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ article.owner }}</a></li>
