--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -27,12 +27,14 @@
     {{ form.phono }}
     <!-- <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Telefon&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
-    <select style="margin-bottom: 15px;" class="custom-select" id="inputGroupSelect01">
+
+    {{ form.working_status }}
+    <!-- <select style="margin-bottom: 15px;" class="custom-select" id="inputGroupSelect01">
         <option selected>Iş vəiyyətiniz</option>
         <option value="1">Sektordayam</option>
         <option value="2">Tələbəyəm</option>
         <option value="3">Işləmirəm</option>
-      </select>
+      </select> -->
       
     
       {{ form.education_industry }}
@@ -43,12 +45,14 @@
     <!-- <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Hansı mövzuda yaza bilərsiniz?&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
 
-    <select style="margin-bottom: 15px;" class="custom-select" id="inputGroupSelect01">
+
+    {{ form.time }}
+    <!-- <select style="margin-bottom: 15px;" class="custom-select" id="inputGroupSelect01">
         <option selected>Nə qədər vaxtdan bir məzmun təqdim edə bilərsiniz?</option>
         <option value="1">Həftədə 1-2 məqalə</option>
         <option value="2">Həftədə 3-4 məqalə</option>
         <option value="3">Ayda 1-2 məqalə</option>
-      </select>
+      </select> -->
 
 <br>
 
