--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -66,7 +66,7 @@
     <li class="menu-has-children"><a href="#" class="sf-with-ul">Xəbər</a>
       <ul style="display: none;">
         <li><a href="#">Biznes</a></li>
-      <li><a href="#">Elm və texnoloiya</a></li>
+      <li><a href="#">Elm və texnologiya</a></li>
       <li><a href="#">Dizayn və inovasiya</a></li>
       <li><a href="#"> İncəsənət və mədəniyyət</a></li>
       </ul>
@@ -76,8 +76,8 @@
 
       <li class="menu-has-children"><a href="#" class="sf-with-ul">Mövzular </a>
         <ul style="display: none;">
-          <li><a href="#">Marketink</a></li>
-          <li><a href="#">Marketink hekayələri</a></li>
+          <li><a href="#">Marketinq</a></li>
+          <li><a href="#">Brend hekayələri</a></li>
         <li><a href="#">İnsan resursları</a></li>
         <li><a href="#"> Logistika</a></li>
         <li><a href="#">Sağlamlıq</a></li>
@@ -96,7 +96,7 @@
     </ul>
   
     </li>
-    <li><a href="#">Müəllifimiz olma</a></li>
+    <li><a href="#">Müəllifimiz ol</a></li>
     <li><a href="/contact">Əlaqə</a></li>
 
     <!-- <div class="">
