--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -39,14 +39,14 @@
 </div>
 <div class="top-post-details">
 <ul class="tags">
-<li><a href="#">2 dəqiqəlik</a></li>
+<li><a href="#">{{ i.tags }}</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
 <h3>{{i.title|truncatechars:40}}</h3>
 </a>
 <ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{i.time}} dəqiqəlik xəbər </a></li>
     </ul>   
 </div>
 
@@ -72,14 +72,15 @@
     </div>
     <div class="top-post-details">
     <ul class="tags">
-    <li><a href="#">2 dəqiqəlik</a></li>
+    <li><a href="#">{{ i.tags }}</a></li>
     </ul>
     <a href="{{i.get_absolute_url}}">
     <h4>{{ i.title|truncatechars:35 }} </h4>
     </a>
     <ul class="meta">
-        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
+        <!-- <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li> -->
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
+        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{i.time}} dəqiqəlik xəbər </a></li>
         </ul>
     </div>
     </div>
@@ -98,14 +99,15 @@
 </div>
 <div class="top-post-details">
 <ul class="tags">
-<li><a href="#">2 dəqiqəlik</a></li>
+<li><a href="#">{{ i.tags }}</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
 <h4>{{ i.title|truncatechars:35 }} </h4>
 </a>
 <ul class="meta">
-<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
+<!-- <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li> -->
 <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
+<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{i.time}} dəqiqəlik xəbər </a></li>
 </ul>
 </div>
 </div>
@@ -157,7 +159,7 @@
 <img class="img-fluid" src="{{i.image.url}}" alt="" data-pagespeed-url-hash="2585403232" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="#">2 dəqiqəlik</a></li>
+<li><a href="#">{{ i.tags }}</a></li>
 </ul>
 </div>
 <div class="col-lg-7 post-right">
@@ -167,7 +169,8 @@
 <ul class="meta">
 <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{i.owner}}</a></li>
 <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{i.created_at}}</a></li>
-<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{i.views}}</a></li>
+<!-- <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{i.views}}</a></li> -->
+<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{i.time}} dəqiqəlik məqalə </a></li>
 </ul>
 <p class="excert">
 {{i.descrtiption|truncatechars:150}}
@@ -208,7 +211,7 @@
 </div>
 <div class="details">
 <ul class="tags">
-<li><a href="#">2 dəqiqəlik</a></li>
+<li><a href="#">{{ item.tags }}</a></li>
 </ul>
 <a href="{{item.get_absolute_url}}">
 <h3>{{ item.title }}</h3>
@@ -216,7 +219,8 @@
 <ul class="meta">
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{item.created_at}}</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{item.time}} dəqiqəlik məqalə </a></li>
+    <!-- <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li> -->
     </ul>
 </div>
 </div>
@@ -237,7 +241,7 @@
 <img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3331199231" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="#">2 dəqiqəlik</a></li>
+<li><a href="#">{{ item.tags }}</a></li>
 </ul>
 </div>
 <div class="details">
@@ -247,7 +251,8 @@
 <ul class="meta">
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{item.created_at}}</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{item.time}} dəqiqəlik məqalə </a></li>
+    <!-- <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li> -->
     </ul>
 <p class="excert">
 {{item.descrtiption|truncatechars:150}}
@@ -270,7 +275,7 @@
 <img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3625699152" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="">2 dəqiqəlik</a></li>
+<li><a href="">{{ item.tags }}</a></li>
 </ul>
 </div>
 <div class="details">
@@ -280,7 +285,7 @@
 <ul class="meta">
     <li><a href=""><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
     <li><a href=""><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ item.created_at }}</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{item.time}} dəqiqəlik məqalə </a></li>
     </ul>
 <p class="excert">
     {{item.descrtiption|truncatechars:150}}</p>
