--- a/news/templates/detail_news.html
+++ b/news/templates/detail_news.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Ətraflı xəbərlər</span> <a href="#">Lorem ipsum</a></h6>
+    <h6><span>Ətraflı xəbərlər</span> <a href="#">    </a></h6>
     </div>
     </div>
     </div>
@@ -48,10 +48,11 @@
     </div>
     <div class="content-wrap">
     <ul class="tags mt-10">
-    <li><a href="#">Food Habit</a></li>
+    <li><a href="#">{{ news.tags }}</a></li>
     </ul>
     <a href="#">
     <h3>{{ news.title }}</h3>
+    <br>
     </a>
     <ul class="meta pb-20">
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{news.views}}</a></li>
