--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -65,10 +65,10 @@
     <li class="menu-active"><a href="/">Ana səhifə</a></li>
     <li class="menu-has-children"><a href="#" class="sf-with-ul">Xəbər</a>
       <ul style="display: none;">
-        <li><a href="#">Biznes</a></li>
-      <li><a href="#">Elm və texnologiya</a></li>
-      <li><a href="#">Dizayn və inovasiya</a></li>
-      <li><a href="#"> İncəsənət və mədəniyyət</a></li>
+      <li><a href="/category/business_news">Biznes</a></li>
+      <li><a href="/category/sciene_and_technology_news">Elm və texnologiya</a></li>
+      <li><a href="/category/design_and_innovation_news">Dizayn və inovasiya</a></li>
+      <li><a href="/category/art_and_culture_news"> İncəsənət və mədəniyyət</a></li>
       </ul>
     
       </li>
@@ -90,7 +90,7 @@
     <!-- <li><a href="/career_center">Karyera</a></li> -->
     <li class="menu-has-children"><a href="#" class="sf-with-ul">Kariyera</a>
     <ul style="display: none;">
-    <li><a href="#">Iş elanları</a></li>
+    <li><a href="/career_center">Iş elanları</a></li>
     <li><a href="#">Elanını yayınla</a></li>
     <li><a href="#">CV yarat</a></li>
     </ul>
