--- a/core/templates/forms.html
+++ b/core/templates/forms.html
@@ -8,26 +8,26 @@
 <div class="form-group form-inline">
 
 <div class="form-group col-lg-6 col-md-12 name">
-    {{ form.name }}
+    {{ CommentForm.name }}
 <!-- <input type="text" class="form-control" id="name" placeholder="Enter Name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter Name&#39;"> -->
 </div>
 
 
 <div class="form-group col-lg-6 col-md-12 email">
-    {{ form.mail }}
+    {{ CommentForm.mail }}
 <!-- <input type="email" class="form-control" id="email" placeholder="Enter email address" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter email address&#39;"> -->
 </div>
 </div>
 
 
 <div class="form-group">
-    {{ form.subject }}
+    {{ CommentForm.subject }}
 <!-- <input type="text" class="form-control" id="subject" placeholder="Subject" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Subject&#39;"> -->
 </div>
 
 
 <div class="form-group">
-    {{ form.message }}
+    {{ CommentForm.message }}
 <!-- <textarea class="form-control mb-10" rows="5" name="message" placeholder="Messege" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Messege&#39;" required=""></textarea> -->
 </div> 
 
