--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -46,11 +46,13 @@
     </a>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 logo-right no-padding ads-banner">
-    <img class="img-fluid" src="{% static 'images/banner-ad.jpg' %}" alt="" data-pagespeed-url-hash="2063517639" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    <img class="img-fluid" src="{% static 'images/9cd5f0.png' %}" alt="" data-pagespeed-url-hash="2063517639" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     </div>
     </div>
     </div>
+    
+    <img src="{% static 'images/9cd5f0.png' %}" alt="">
     
     <div class="container main-menu" id="main-menu">
       <button type="button" id="mobile-nav-toggle">
@@ -63,7 +65,7 @@
     <nav id="nav-menu-container">
     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
     <li class="menu-active"><a href="/">Ana səhifə</a></li>
-    <li class="menu-has-children"><a href="#" class="sf-with-ul">Xəbər</a>
+    <li class="menu-has-children"><a href="/news" class="sf-with-ul">Xəbər</a>
       <ul style="display: none;">
       <li><a href="/category/business_news">Biznes</a></li>
       <li><a href="/category/sciene_and_technology_news">Elm və texnologiya</a></li>
@@ -74,13 +76,13 @@
       </li>
 
 
-      <li class="menu-has-children"><a href="#" class="sf-with-ul">Mövzular </a>
+      <li class="menu-has-children"><a href="/article" class="sf-with-ul">Mövzular </a>
         <ul style="display: none;">
-          <li><a href="#">Marketinq</a></li>
-          <li><a href="#">Brend hekayələri</a></li>
-        <li><a href="#">İnsan resursları</a></li>
-        <li><a href="#"> Logistika</a></li>
-        <li><a href="#">Sağlamlıq</a></li>
+          <li><a href="/category/marketing_articles">Marketinq</a></li>
+          <li><a href="/category/brand_stories_articles">Brend hekayələri</a></li>
+        <li><a href="/category/human_resources_articles">İnsan resursları</a></li>
+        <li><a href="/category/logistics_articles"> Logistika</a></li>
+        <li><a href="/category/health_articles">Sağlamlıq</a></li>
         </ul>
       
         </li>
@@ -96,7 +98,7 @@
     </ul>
   
     </li>
-    <li><a href="#">Müəllifimiz ol</a></li>
+    <li><a href="/author">Müəllifimiz ol</a></li>
     <li><a href="/contact">Əlaqə</a></li>
 
     <!-- <div class="">
