--- a/article/templates/article.html
+++ b/article/templates/article.html
@@ -124,9 +124,9 @@
 
 
 
+    {% include "./includes/right_part.html"%} 
 
-
-    <div class="col-lg-4">
+    <!-- <div class="col-lg-4">
         <div class="sidebars-area">
         <div class="single-sidebar-widget editors-pick-widget">
         <h6 class="title">Lorem ipsumm</h6>
@@ -311,7 +311,7 @@
         </ul>
         </div>
         </div>
-        </div>
+        </div> -->
 
 
     </div>
