--- a/article/templates/detail_article.html
+++ b/article/templates/detail_article.html
@@ -121,7 +121,10 @@
     </div>
     
     </div>
-    <div class="col-lg-4">
+
+    {% include "./includes/right_part.html"%} 
+
+    <!-- <div class="col-lg-4">
         <div class="sidebars-area">
         <div class="single-sidebar-widget editors-pick-widget">
         <h6 class="title">Lorem ipsum</h6>
@@ -307,7 +310,7 @@
         </ul>
         </div>
         </div>
-        </div>
+        </div> -->
     </div>
     </div>
     </section>
