--- a/article/templates/popular_article.html
+++ b/article/templates/popular_article.html
@@ -128,7 +128,9 @@
 
 
 
-    <div class="col-lg-4">
+    {% include "./includes/right_part.html"%} 
+
+    <!-- <div class="col-lg-4">
       <div class="sidebars-area">
       <div class="single-sidebar-widget editors-pick-widget">
       <h6 class="title">Lorem ipsum</h6>
@@ -314,7 +316,7 @@
       </ul>
       </div>
       </div>
-      </div>
+      </div> -->
     </div>
     </div>
     </section>
