--- a/core/templates/career_center.html
+++ b/core/templates/career_center.html
@@ -43,7 +43,7 @@
             {% for i in career_center %}
             <div class="col-md-3 col-xl-3">
                 <div class="card bg-c-blue order-card">
-                    <img src="{{ i.logo.url }}" alt="">
+                    <img style="height: 130px;" src="{{ i.logo.url }}" alt="">
                 <!-- <div class="card-block">
                     <h6 class="m-b-20 order-card">{{ i.tittle }}</h6>
                     <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>486</span></h2>
