--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -42,7 +42,7 @@
 <li><a href="#">{{ i.tags }}</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
-<h3>{{i.title|truncatechars:40}}</h3>
+<h3>{{i.title|truncatechars:60}}</h3>
 </a>
 <ul class="meta">
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
@@ -233,12 +233,13 @@
 <div class="row mt-20 medium-gutters">
     {% for item in popular_list2 %}
 
-    
-<div class="col-lg-6 single-popular-post">
+  
+
+<div  class="col-lg-6 single-popular-post">
 <div class="feature-img-wrap relative">
 <div class="feature-img relative">
 <div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3331199231" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<img style="height: 200px;" class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3331199231" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
 <li><a href="#">{{ item.tags }}</a></li>
@@ -261,6 +262,8 @@
 
 
 </div>
+
+
 {% endfor %}
 
 
@@ -272,7 +275,7 @@
 <div class="feature-img-wrap relative">
 <div class="feature-img relative">
 <div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3625699152" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<img style="height: 200px;" class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3625699152" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
 <li><a href="">{{ item.tags }}</a></li>
@@ -293,12 +296,15 @@
 
 
 </div>
+
+
 <div class="col-lg-12" style="margin-top: 15px;">
     <div class="news-tracker-wrap">
     <h6><span style="color: black;">Daha çox popular məqalə üçün</span> <a href="/popular_article" style="color: red;">bura tıklayın</a></h6>
     </div>
     </div>
 
+    
 {% endfor %}
 
 
@@ -331,7 +337,7 @@
             {% for i in career_center_home %}
             <div class="col-md-4 col-xl-3">
                 <div class="card bg-c-blue order-card">
-                    <img src="{{ i.logo.url }}" alt="">
+                    <img style="height: 100px;" src="{{ i.logo.url }}" alt="">
                 <!-- <div class="card-block">
                     <h6 class="m-b-20 order-card">{{ i.tittle }}</h6>
                     <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>486</span></h2>
@@ -360,231 +366,10 @@
 
 </div>
 
-
-
-<div class="col-lg-4">
-<div class="sidebars-area">
-<div class="single-sidebar-widget editors-pick-widget">
-<h6 class="title">Lorem ipsum</h6>
-<div class="editors-pick-post">
-<div class="feature-img-wrap relative">
-<div class="feature-img relative">
-<div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="../static/images/e1.jpg" alt="" data-pagespeed-url-hash="3111915323" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<ul class="tags">
-<li><a href="#">Travel</a></li>
-</ul>
-</div>
-<div class="details">
-<a href="#">
-<h4 class="mt-20">Lorem, ipsum dolor sit 
-    amet consectetur adipisicing elit. </h4>
-</a>
-<ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>16 may 2022</a></li>
-    </ul>
-<p class="excert">
-Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor incididunt ed do eius.
-</p>
-</div>
-<div class="post-lists">
-<div class="single-post d-flex flex-row">
-<div class="thumb">
-<img src="../static/images/e2.jpg" alt="" data-pagespeed-url-hash="3406415244" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<div class="detail">
-<a href="#"><h6>Lorem, ipsum dolor sit 
-    amet consectetur adipisicing elit.</h6></a>
-<ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-</div>
-</div>
-<div class="single-post d-flex flex-row">
-<div class="thumb">
-<img src="../static/images/e3.jpg" alt="" data-pagespeed-url-hash="3700915165" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<div class="detail">
-<a href="#"><h6>Lorem, ipsum dolor sit 
-    amet consectetur adipisicing elit.</h6></a>
-<ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-</div>
-</div>
-<div class="single-post d-flex flex-row">
-<div class="thumb">
-<img src="../static/images/e4.jpg" alt="" data-pagespeed-url-hash="3995415086" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<div class="detail">
-<a href="#"><h6>Lorem, ipsum dolor sit 
-    amet consectetur adipisicing elit.</h6></a>
-<ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="single-sidebar-widget ads-widget">
-<img class="img-fluid" src="../static/images/sidebar-ads.jpg" alt="" data-pagespeed-url-hash="3321942762" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
+{% include "./includes/right_part.html"%} 
 
 
 
-
-
-
-
-
-<div class="single-sidebar-widget newsletter-widget">
-<h6 class="title">Bizə qoşulun</h6>
-<p>
-Bizə qoşularaq iş elanlarından və son xebərlərdən xəbərdar olun
-</p>
-{% if submitted %}
-<p class="success">
-    Gonderdin gaga
-</p>
-{% else %}
-<form action="" method="POST">
-{% csrf_token %}
-
-<div class="form-group d-flex flex-row">
-<div class="col-autos">
-<div class="input-group">
-    {{ form.email }}
-<!-- <input class="form-control" placeholder="Email Address" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Email Address&#39;" type="text"> -->
-</div>
-</div>
-
-{% endif %}
-
-
-
-<button type="submit" class="primary-btn text-uppercase"> Göndər</button>
-
-<!-- <a href="#" class="bbtns">Subcribe</a> -->
-</div>
-</form>
-{% for message in messages %}
-
-<p class="text-success">{{message}}</p>
-
-{% endfor %}
-</div>
-
-
-
-
-
-
-
-
-<div class="single-sidebar-widget most-popular-widget">
-<h6 class="title">Lorem, ipsum</h6>
-<div class="single-list flex-row d-flex">
-<div class="thumb">
-<img src="../static/images/m1.jpg" alt="" data-pagespeed-url-hash="2510187219" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<div class="details">
-<a href="#">
-<h6>Lorem, ipsum dolor sit 
-    amet consectetur adipisicing elit.</h6>
-</a>
-<ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-</div>
-</div>
-<div class="single-list flex-row d-flex">
-<div class="thumb">
-<img src="../static/images/m2.jpg" alt="" data-pagespeed-url-hash="2804687140" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<div class="details">
-<a href="#">
-<h6>Lorem, ipsum dolor sit 
-    amet consectetur adipisicing elit.</h6>
-</a>
-<ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-</div>
-</div>
-<div class="single-list flex-row d-flex">
-<div class="thumb">
-<img src="../static/images/m3.jpg" alt="" data-pagespeed-url-hash="3099187061" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<div class="details">
-<a href="#">
-<h6>Lorem, ipsum dolor sit 
-    amet consectetur adipisicing elit. </h6>
-</a>
-<ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-</div>
-</div>
-<div class="single-list flex-row d-flex">
-<div class="thumb">
-<img src="../static/images/m4.jpg" alt="" data-pagespeed-url-hash="3393686982" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<div class="details">
-<a href="#">
-<h6>Lorem, ipsum dolor sit 
-    amet consectetur adipisicing elit.</h6>
-</a>
-<ul class="meta">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-</div>
-</div>
-</div>
-<div class="single-sidebar-widget social-network-widget">
-<h6 class="title">Sosial şəbəkə</h6>
-<ul class="social-list">
-<li class="d-flex justify-content-between align-items-center fb">
-<div class="icons d-flex flex-row align-items-center">
-<i class="fa fa-facebook" aria-hidden="true"></i>
-<p>983 Bəyənmə</p>
-</div>
-<a href="#">Səhifəni bəyən</a>
-</li>
-<li class="d-flex justify-content-between align-items-center tw">
-<div class="icons d-flex flex-row align-items-center">
-<i class="fa fa-twitter" aria-hidden="true"></i>
-<p>983 İzləyici</p>
-</div>
-<a href="#">Bizi izlə</a>
-</li>
-<li class="d-flex justify-content-between align-items-center yt">
-<div class="icons d-flex flex-row align-items-center">
-<i class="fa fa-youtube-play" aria-hidden="true"></i>
-<p>983 Abunəçi</p>
-</div>
-<a href="#">Abunə ol</a>
-</li>
-<li class="d-flex justify-content-between align-items-center rs">
-<div class="icons d-flex flex-row align-items-center">
-<i class="fa fa-rss" aria-hidden="true"></i>
-<p>983 Abunəçi</p>
-</div>
-<a href="#">Abunə ol</a>
-</li>
-</ul>
-</div>
-</div>
-</div>
 </div>
 </div>
 </section>
