--- a/core/templates/search.html
+++ b/core/templates/search.html
@@ -130,8 +130,8 @@
 
 
 
-
-    <div class="col-lg-4">
+    {% include "./includes/right_part.html"%} 
+    <!-- <div class="col-lg-4">
         <div class="sidebars-area">
         <div class="single-sidebar-widget editors-pick-widget">
         <h6 class="title">Lorem ipsum</h6>
@@ -316,7 +316,7 @@
         </ul>
         </div>
         </div>
-        </div>
+        </div> -->
     </div>
     </div>
     </section>
