--- a/news/templates/detail_news.html
+++ b/news/templates/detail_news.html
@@ -63,7 +63,7 @@
 
     </ul>
 
-    <p>
+    <p style="font-size: 20px; line-height: 1.3; color: black;">
         {{ news.descrtiption }}
     </p>
     <div class="navigation-wrap justify-content-between d-flex">
@@ -139,7 +139,10 @@
 
 
 
-    <div class="col-lg-4">
+
+    {% include "./includes/right_part.html"%} 
+
+    <!-- <div class="col-lg-4">
         <div class="sidebars-area">
         <div class="single-sidebar-widget editors-pick-widget">
         <h6 class="title">Lorem ipsum</h6>
@@ -325,7 +328,9 @@
         </ul>
         </div>
         </div>
-        </div>
+        </div> -->
+
+
     </div>
     </div>
     </section>
