--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -50,7 +50,7 @@
     <img class="img-fluid" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="2585403232" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <ul class="tags">
-    <li><a href="#">Lifestyle</a></li>
+    <li><a href="#">{{i.tags}}</a></li>
     </ul>
     </div>
 
@@ -124,7 +124,9 @@
 
 
 
-    <div class="col-lg-4">
+    {% include "./includes/right_part.html"%} 
+
+    <!-- <div class="col-lg-4">
         <div class="sidebars-area">
         <div class="single-sidebar-widget editors-pick-widget">
         <h6 class="title">Lorem ipsumm</h6>
@@ -309,7 +311,7 @@
         </ul>
         </div>
         </div>
-        </div>
+        </div> -->
 
 
 
