--- a/news/templates/sciene_and_technology.html
+++ b/news/templates/sciene_and_technology.html
@@ -123,8 +123,9 @@
 
 
 
+    {% include "./includes/right_part.html"%} 
 
-    <div class="col-lg-4">
+    <!-- <div class="col-lg-4">
         <div class="sidebars-area">
         <div class="single-sidebar-widget editors-pick-widget">
         <h6 class="title">Lorem ipsumm</h6>
@@ -309,7 +310,7 @@
         </ul>
         </div>
         </div>
-        </div>
+        </div> -->
 
 
 
