--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -6,58 +6,63 @@
     <div class="container">
     <div class="row">
     <div class="col-lg-3 col-md-6 single-footer-widget">
-    <h4>Top Products</h4>
+    <h4>Xəbərlər</h4>
     <ul>
-    <li><a href="#">Managed Website</a></li>
-    <li><a href="#">Manage Reputation</a></li>
-    <li><a href="#">Power Tools</a></li>
-    <li><a href="#">Marketing Service</a></li>
+    <li><a href="#">Biznes</a></li>
+    <li><a href="#">Elm və Texnologiya</a></li>
+    <li><a href="#">Dizayn və İnnovasiya</a></li>
+    <li><a href="#">İncəsənət və Mədəniyyət</a></li>
     </ul>
     </div>
     <div class="col-lg-2 col-md-6 single-footer-widget">
-    <h4>Quick Links</h4>
+    <h4>Mövzular</h4>
     <ul>
-    <li><a href="#">Jobs</a></li>
-    <li><a href="#">Brand Assets</a></li>
-    <li><a href="#">Investor Relations</a></li>
-    <li><a href="#">Terms of Service</a></li>
+    <li><a href="#">Marketinq</a></li>
+    <li><a href="#">Brend hekayələri</a></li>
+    <li><a href="#">İnsan resursları</a></li>
+    <li><a href="#">Logistika</a></li>
+    <li><a href="#">Sağlamlıq</a></li>
     </ul>
     </div>
     <div class="col-lg-2 col-md-6 single-footer-widget">
-    <h4>Features</h4>
+    <h4>Kariyera</h4>
     <ul>
-    <li><a href="#">Jobs</a></li>
-    <li><a href="#">Brand Assets</a></li>
-    <li><a href="#">Investor Relations</a></li>
-    <li><a href="#">Terms of Service</a></li>
+        <li><a href="#">Müəllifimiz ol</a></li>
+    <li><a href="#">İş elanları</a></li>
+    <li><a href="#">Elanını yayınla</a></li>
+    <li><a href="#">CV yarat</a></li>
     </ul>
     </div>
     <div class="col-lg-2 col-md-6 single-footer-widget">
-    <h4>Resources</h4>
+    <h4>İşgüzar</h4>
     <ul>
-    <li><a href="#">Guides</a></li>
-    <li><a href="#">Research</a></li>
-    <li><a href="#">Experts</a></li>
-    <li><a href="#">Agencies</a></li>
+    <li><a href="#">Haqqımızda</a></li>
+    <li><a href="#">Müəlliflər</a></li>
+    <li><a href="#">Əlaqə</a></li>
+    <li><a href="#">Reklam</a></li>
     </ul>
+
+    
     </div>
-    <div class="col-lg-3 col-md-6 single-footer-widget">
-    <h4>Instragram Feed</h4>
+
+
+    <!-- <div class="col-lg-3 col-md-6 single-footer-widget">
+    <h4>sdfsdfsef</h4>
     <ul class="instafeed d-flex flex-wrap">
-    <li><img src="./i1.jpg" alt="" data-pagespeed-url-hash="2811051271" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
-    <li><img src="./i2.jpg" alt="" data-pagespeed-url-hash="3105551192" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
-    <li><img src="./i3.jpg" alt="" data-pagespeed-url-hash="3400051113" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
-    <li><img src="./i4.jpg" alt="" data-pagespeed-url-hash="3694551034" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
-    <li><img src="./i5.jpg" alt="" data-pagespeed-url-hash="3989050955" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
-    <li><img src="./i6.jpg" alt="" data-pagespeed-url-hash="4283550876" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
-    <li><img src="./i7.jpg" alt="" data-pagespeed-url-hash="283083501" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
-    <li><img src="./i8.jpg" alt="" data-pagespeed-url-hash="577583422" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
+    <li><img src="{% static 'images/i1.jpg' %}" alt="" data-pagespeed-url-hash="2811051271" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
+    <li><img src="{% static 'images/i2.jpg' %} " alt="" data-pagespeed-url-hash="3105551192" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
+    <li><img src=" {% static 'images/i3.jpg' %} " alt="" data-pagespeed-url-hash="3400051113" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
+    <li><img src=" {% static 'images/i4.jpg' %} " alt="" data-pagespeed-url-hash="3694551034" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
+    <li><img src=" {% static 'images/i5.jpg' %} " alt="" data-pagespeed-url-hash="3989050955" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
+    <li><img src=" {% static 'images/i6.jpg' %} " alt="" data-pagespeed-url-hash="4283550876" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
+    <li><img src=" {% static 'images/i7.jpg' %} " alt="" data-pagespeed-url-hash="283083501" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
+    <li><img src=" {% static 'images/i8.jpg' %} " alt="" data-pagespeed-url-hash="577583422" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></li>
     </ul>
-    </div>
+    </div> -->
     </div>
     <div class="footer-bottom row align-items-center">
     <p class="footer-text m-0 col-lg-8 col-md-12">
-    Copyright ©<script>document.write(new Date().getFullYear());</script>2022 All rights reserved | <i class="fa fa-heart-o" aria-hidden="true"></i>   <a href="#" target="_blank">   </a>
+    Bütün müəllif hüquqları qorunur © <script>document.write(new Date().getFullYear());</script> isguzar.az | <i class="fa fa-heart-o" aria-hidden="true"></i>   <a href="#" target="_blank">   </a>
     </p>
     <div class="col-lg-4 col-md-12 footer-social">
     <a href="#"><i class="fa fa-facebook"></i></a>
