--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -41,12 +41,12 @@
     pagespeed.CriticalImages.Run('/mod_pagespeed_beacon','#','-ilGEe-FWC',true,false,'YwNettDG2vg');
     //]]></script> 
     <a href="/">
-     <img class="img-fluid" style="width: 200px;" src="{% static 'images/isguzar.png' %}" alt="" data-pagespeed-url-hash="1405544234" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+     <img class="img-fluid" style="width: 275px;" src="{% static 'images/isguzar.png' %}" alt="" data-pagespeed-url-hash="1405544234" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 
     </a>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 logo-right no-padding ads-banner">
-    <img class="img-fluid" src="{% static 'images/9cd5f0.png' %}" alt="" data-pagespeed-url-hash="2063517639" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    <img style="border-radius: 15px;" class="img-fluid" src="{% static 'images/wp.jpeg' %}" alt="" data-pagespeed-url-hash="2063517639" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     </div>
     </div>
