--- a/core/templates/includes/right_part.html
+++ b/core/templates/includes/right_part.html
@@ -84,7 +84,7 @@
 
     <a href="/author">
     <div class="single-sidebar-widget ads-widget">
-    <img class="img-fluid" src="https://pazarlamailetisimi.com/wp-content/uploads/2022/01/pazarlama-iletisimi-yazarlik-basvurusu-746x610.jpg" alt="" data-pagespeed-url-hash="3321942762" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    <img class="img-fluid" src="{% static 'images/SəndəYaz.png' %}" alt="" data-pagespeed-url-hash="3321942762" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
 </a>
     
