--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -39,10 +39,10 @@
 </div>
 <div class="top-post-details">
 <ul class="tags">
-<li><a href="#">{{ i.tags }}</a></li>
+<li style="font-size: 18px;"><a href="#">{{ i.tags }}</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
-<h3>{{i.title|truncatechars:60}}</h3>
+<h3>{{i.title}}</h3>
 </a>
 <ul class="meta">
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
@@ -75,7 +75,7 @@
     <li><a href="#">{{ i.tags }}</a></li>
     </ul>
     <a href="{{i.get_absolute_url}}">
-    <h4>{{ i.title|truncatechars:35 }} </h4>
+    <h4>{{ i.title }} </h4>
     </a>
     <ul class="meta">
         <!-- <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li> -->
@@ -102,7 +102,7 @@
 <li><a href="#">{{ i.tags }}</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
-<h4>{{ i.title|truncatechars:35 }} </h4>
+<h4>{{ i.title}} </h4>
 </a>
 <ul class="meta">
 <!-- <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li> -->
@@ -129,7 +129,7 @@
 
 <div class="col-lg-12">
 <div class="news-tracker-wrap">
-<h6><span style="color: black;">Daha çox xəbər üçün</span> <a href="/news" style="color: red;">bura tıklayın</a></h6>
+<h6><span style="color: black; font-size: 16px;">Daha çox xəbər üçün</span> <a href="/news" style="color: red; font-size: 16px;">bura tıklayın</a></h6>
 </div>
 </div>
 
@@ -182,7 +182,7 @@
 
 <div class="col-lg-12" style="margin-top: 15px;">
     <div class="news-tracker-wrap">
-    <h6><span style="color: black;">Daha çox məqalə üçün</span> <a href="/article" style="color: red;">bura tıklayın</a></h6>
+    <h6><span style="color: black; font-size: 16px;">Daha çox məqalə üçün</span> <a href="/article" style="color: red; font-size: 16px;">bura tıklayın</a></h6>
     </div>
     </div>
 
@@ -300,7 +300,7 @@
 
 <div class="col-lg-12" style="margin-top: 15px;">
     <div class="news-tracker-wrap">
-    <h6><span style="color: black;">Daha çox popular məqalə üçün</span> <a href="/popular_article" style="color: red;">bura tıklayın</a></h6>
+    <h6><span style="color: black; font-size: 16px;">Daha çox popular məqalə üçün</span> <a href="/popular_article" style="color: red; font-size: 16px;">bura tıklayın</a></h6>
     </div>
     </div>
 
@@ -355,7 +355,7 @@
         <div class="col-lg-12" style="margin-top: 15px;">
             <div class="news-tracker-wrap">
                 <hr>
-            <h6><span style="color: black;">Daha çox iş elanı üçün</span> <a href="/career_center" style="color: red;">bura tıklayın</a></h6>
+            <h6><span style="color: black; font-size: 16px; ">Daha çox iş elanı üçün</span> <a href="/career_center" style="color: red; font-size: 16px;">bura tıklayın</a></h6>
             </div>
             </div>
 
