--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -11,20 +11,20 @@
 
 
 <div class="container">
-    <form method="POST">
+    <form action="" method="POST">
 
         {% csrf_token %}
 
 
     <h1 style="text-align: center; margin-top: 5px;">Yazarımız ol!</h1>
-        {{ form.name_surname }}
+        {{ form.name }}
     <!-- <input style="margin-top: 15px;" name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Ad ve Soyad&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
-    {{ form.mail }}
+    {{ form.email }}
     <!-- <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;E-Mail adres&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
 
-    {{ form.phono }}
+    {{ form.phone }}
     <!-- <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Telefon&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
 
@@ -36,15 +36,13 @@
         <option value="3">Işləmirəm</option>
       </select> -->
       
-    
-      {{ form.education_industry }}
+      {{form.education_industry}}
     <!-- <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Təhsil və sənayə təcrübəniz&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
-
-    {{ form.subjects }}
+    {{form.subjects}}
     <!-- <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Hansı mövzuda yaza bilərsiniz?&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
-
+      {{form.time}}
 
     
     <!-- <select style="margin-bottom: 15px;" class="custom-select" id="inputGroupSelect01">
@@ -57,7 +55,11 @@
 <br>
 <!-- <a href="/author">  -->
     
-    
+{% for message in messages %}
+
+<p class="text-success" style="margin-left: 17px;">{{message}}</p>
+
+{% endfor %}
 <div class="col-lg-12">
     <div class="alert-msg" style="text-align: left;"></div>
    <button type="submit" class="text-white primary-btn text-uppercase "> Göndər </a> </button> 
