--- a/news/templates/detail_news.html
+++ b/news/templates/detail_news.html
@@ -50,22 +50,102 @@
     <ul class="tags mt-10">
     <li><a href="#">{{ news.tags }}</a></li>
     </ul>
-    <a href="#">
-    <h3>{{ news.title }}</h3>
+    <a  href="">
+    <h3 class="ali" style="font-style: 40px !important; color: black;" >{{ news.title }}</h3>
     <br>
     </a>
     <ul class="meta pb-20">
-        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{news.views}}</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ news.created_at }}</a></li>
+        <li class="w3-large"><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{news.views}}</a></li>
+    <li class="w3-large" ><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ news.created_at }}</a></li>
 
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>  {{news_comments_count_detail.count}}  </a></li>
+    <li class="w3-large" ><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>  {{news_comments_count_detail.count}}  </a></li>
 
 
     </ul>
-
-    <p style="font-size: 20px; line-height: 1.3; color: black;">
-        {{ news.descrtiption }}
+    <p class="ali1" >
+        {{ news.descrtiption|safe }}
     </p>
+    <img style="  display: block;
+    margin-left: auto;
+    margin-right: auto;" class="img-fluid center" src="{{ news.detail_image.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+<p class="ali1" >
+    {{ news.descrtiption2|safe }}
+</p>
+
+{% if news.detail_image2 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ news.detail_image2.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+{% if news.descrtiption3 %}
+<p class="ali1" >
+    {{ news.descrtiption3|safe }}
+</p>
+{% endif %}
+
+
+{% if news.detail_image3 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ news.detail_image3.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+
+{% if news.descrtiption4 %}
+<p class="ali1" >
+    {{ news.descrtiption4|safe }}
+</p>
+{% endif %}
+
+
+{% if news.detail_image4 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ news.detail_image4.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+{% if news.descrtiption5 %}
+<p class="ali1" >
+    {{ news.descrtiption5|safe }}
+</p>
+{% endif %}
+
+
+{% if news.detail_image5 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ news.detail_image5.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+{% if news.descrtiption6 %}
+<p class="ali1" >
+    {{ news.descrtiption6|safe }}
+</p>
+{% endif %}
+
+
+
+
+{% if news.detail_image6 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ news.detail_image6.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+
+{% if news.video_link %}
+
+<iframe width="680" height="345" src="{{ news.video_link }}">
+</iframe>
+
+{% endif %}
     <div class="navigation-wrap justify-content-between d-flex">
     <a class="prev" href="#"><span class="lnr lnr-arrow-left"></span>Prev Post</a>
     <a class="next" href="#">Next Post<span class="lnr lnr-arrow-right"></span></a>
